<resources>
    <string name="app_name">YoLy</string>

    <integer name="com_vk_sdk_AppId">5713449</integer>

    <string name="tv_country_list_title">Страны</string>
    <string name="country_choose_hint">Выберите страну</string>
    <string name="tv_title_repeat_password">Повторите пароль</string>
    <string name="tv_title_type_password">Придумайте пароль</string>
    <string name="tv_title_type_login">Придумайте логин</string>
    <string name="et_default_phone">+7</string>
    <string name="tv_default_date">00/00/0000</string>
    <string name="tv_title_registration">Регистрация</string>
    <string name="tv_title_birthday">Дата рождения</string>
    <string name="tv_title_phone">Телефон</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="tv_title_share">Рассказать друзьям о приложении</string>
    <string name="btn_next">Далее</string>
    <string name="slide_title_1">Сделайте и загрузите фотографию хорошего качества</string>
    <string name="slide_title_2">Сделайте и загрузите фотографию хорошего качества</string>
    <string name="slide_title_3">Сделайте и загрузите фотографию хорошего качества</string>
    <string name="slide_title_4">Сделайте и загрузите фотографию хорошего качества</string>
    <string name="tv_after_registration_title">Ваш аккаунт</string>
    <string name="tv_successfully_registered">Аккаунт NAME успешно зарегистрирован</string>
    <string name="tv_successfully_registered_filter">NAME</string>
    <string name="btn_start_using">Начать использование</string>
    <string name="tv_before_login_greets">Приложение позволит Вам ходить по магазинам и примерять свежие коллекции не вставая с дивана, что предотвратит ожидания в очередях, душную обстановку в тц и самое главное будет значительно экономить Ваше драгоценное время</string>
    <string name="drawer_footer_description">Приложение позволит Вам ходить по магазинам и примерять свежие коллекции не вставая с дивана, что предотвратит ожидания в очередях, душную обстановку в тц</string>
    <string name="yourlook">YourLook</string>
    <string name="btn_before_login_login">Войти в приложение</string>
    <string name="btn_before_login_register">Зарегистрироваться</string>
    <string name="tv_before_login_social">Войти с помощью социальных сетей</string>
    <string name="tv_login_title">Вход</string>
    <string name="tv_login_hint">Ваш логин</string>
    <string name="tv_password_hint">Пароль</string>
    <string name="btn_login">Войти в приложение</string>

    <string name="drawer_item_news">НОВОСТИ</string>
    <string name="drawer_item_chat">ЧАТ</string>
    <string name="drawer_item_account">АККАУНТ</string>
    <string name="drawer_item_try_look">ПРИМЕРИТЬ НОВЫЙ LOOK</string>
    <string name="drawer_item_popular_looks">ПОПУЛЯРНЫЕ LOOK\'S</string>
    <string name="drawer_item_delete_look">СТЕРЕТЬ LOOK\'S</string>
    <string name="drawer_item_to_liked">В ИЗБРАННОЕ</string>
    <string name="tv_drawer_share">Рассказать друзьям</string>
    <string name="activity_liked_title">избранное</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\nExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="action_take_photo">Сделать фото</string>
    <string name="action_load_photo">Выбрать фото с галереи</string>
    <string name="popular_looks_btn_more">Подробнее</string>
    <string name="rub">₽</string>
    <string name="btn_buy_pro">Купить PRO</string>
    <string name="popular_look_btn_buy">Купить</string>
    <string name="new_look_greets">Загрузите свою фотографию, на которую Вы будете примерять новый LOOK. Фотография должна уместиться в область приведенную ниже</string>
    <string name="tv_brand_list_title">Бренды</string>
    <string name="brand_choose_hint">Выберите бренд</string>
</resources>
