<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/yourlook"
        android:textColor="@color/colorTextPrimary"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/tv_before_login_greets"
        android:textColor="@color/colorTextPrimary" />

    <Button
        android:id="@+id/btn_register"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_primary"
        android:text="@string/btn_before_login_register"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_primary_outline"
        android:text="@string/btn_before_login_login"
        android:textColor="@color/colorTextPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/tv_before_login_social"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_social_vk" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_social_facebook" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_social_twitter" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
