<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_after_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="yoly.com.android.yoly.ui.activity.AfterRegisterActivity">

    <TextView
        style="@style/AppTheme.TextView.Primary.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_after_registration_title" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@drawable/cat" />

    <TextView
        android:id="@+id/tv_greets"
        style="@style/AppTheme.TextView.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/tv_successfully_registered"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/AppTheme.TextView.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="imikhailova@gmail.com"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_continue"
        style="@style/AppTheme.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/btn_start_using" />
</LinearLayout>
