<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_country_choose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context="yoly.com.android.yoly.ui.activity.CountryChooseActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/AppTheme.TextView.Primary.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_country_list_title"
        app:textAllCaps="true" />

    <RelativeLayout
        android:id="@+id/rl_container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:id="@+id/ll_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_search_primary_24dp" />

            <TextView
                android:id="@+id/tv_country_name"
                style="@style/AppTheme.TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/country_choose_hint" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/ll_controls"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next"
        android:layout_below="@+id/rl_container_header"
        android:layout_marginTop="24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/recycler_view"
        android:background="@drawable/gradient_to_bottom_white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/recycler_view"
        android:background="@drawable/gradient_to_top_white" />

    <Button
        android:id="@+id/btn_next"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/btn_next" />
</RelativeLayout>